--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^1.1.4",
+    "@types/file-saver": "^2.0.5",
     "axios": "^0.27.2",
     "element-plus": "^2.1.11",
+    "file-saver": "^2.0.5",
     "pinia": "^2.0.13",
     "sass": "^1.51.0",
     "sass-loader": "^12.6.0",
+    "script-loader": "^0.7.2",
     "vue": "^3.2.25",
-    "vue-router": "4"
+    "vue-router": "4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.1",
